[gd_scene load_steps=15 format=3 uid="uid://2deuujkaeb54"]

[ext_resource type="Script" path="res://src/logic/ChatLogic.gd" id="1_akn28"]
[ext_resource type="PackedScene" uid="uid://bqc1xtpj2h1c5" path="res://src/side_bar/SideBar.tscn" id="1_cuiif"]
[ext_resource type="Script" path="res://src/World.gd" id="1_ta7mb"]
[ext_resource type="PackedScene" uid="uid://brk8apg1ijq2o" path="res://src/level/Level.tscn" id="2_dyt3k"]
[ext_resource type="Script" path="res://src/logic/NeuroLogic.gd" id="2_jjnbv"]
[ext_resource type="Script" path="res://src/logic/ViewershipLogic.gd" id="4_q44ob"]
[ext_resource type="Script" path="res://src/logic/RamLogic.gd" id="5_me77c"]
[ext_resource type="PackedScene" uid="uid://4a2id2oc63um" path="res://src/debug/NeuroStateDebug.tscn" id="6_f7iw2"]
[ext_resource type="Script" path="res://src/logic/GameplayLogic.gd" id="6_wkq73"]
[ext_resource type="AudioStream" uid="uid://eyu7sxpan0l3" path="res://assets/audio/sfx/GameOver.ogg" id="7_7yl2f"]
[ext_resource type="PackedScene" uid="uid://278hip3aifva" path="res://src/ram_bar/RamBar.tscn" id="8_khx74"]
[ext_resource type="AudioStream" uid="uid://b1fdlbna8gvgl" path="res://assets/audio/sfx/StartGame.ogg" id="8_o35ey"]
[ext_resource type="PackedScene" uid="uid://cyo7ov4bgcdpo" path="res://src/DarkOverlay.tscn" id="11_viw1t"]
[ext_resource type="PackedScene" uid="uid://bkgcf10bwcudt" path="res://src/tutorial/Tutorial.tscn" id="14_ix57b"]

[node name="World" type="Node2D" node_paths=PackedStringArray("chat_logic", "neuro_logic", "viewership_logic", "ram_logic", "gameplay_logic")]
script = ExtResource("1_ta7mb")
chat_logic = NodePath("Logic/ChatLogic")
neuro_logic = NodePath("Logic/NeuroLogic")
viewership_logic = NodePath("Logic/ViewershipLogic")
ram_logic = NodePath("Logic/RamLogic")
gameplay_logic = NodePath("Logic/GameplayLogic")

[node name="Logic" type="Node" parent="."]

[node name="ChatLogic" type="Node" parent="Logic"]
script = ExtResource("1_akn28")

[node name="NeuroLogic" type="Node" parent="Logic"]
script = ExtResource("2_jjnbv")
sleepy_growth = 0.1

[node name="ViewershipLogic" type="Node" parent="Logic"]
script = ExtResource("4_q44ob")

[node name="RamLogic" type="Node" parent="Logic"]
script = ExtResource("5_me77c")

[node name="GameplayLogic" type="Node" parent="Logic"]
script = ExtResource("6_wkq73")

[node name="GameEndAudio" type="AudioStreamPlayer" parent="Logic/GameplayLogic"]
stream = ExtResource("7_7yl2f")
bus = &"SFX"

[node name="GameStartAudio" type="AudioStreamPlayer" parent="Logic/GameplayLogic"]
stream = ExtResource("8_o35ey")
bus = &"SFX"

[node name="Level" parent="." instance=ExtResource("2_dyt3k")]

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Content" type="Control" parent="Hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SideBar" parent="Hud/Content" instance=ExtResource("1_cuiif")]
layout_mode = 1
offset_right = 360.0

[node name="NeuroStateDebug" parent="Hud/Content" instance=ExtResource("6_f7iw2")]
visible = false
layout_mode = 1
offset_left = -91.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 8.0

[node name="RamBar" parent="Hud/Content" node_paths=PackedStringArray("progress_bar") instance=ExtResource("8_khx74")]
layout_mode = 1
offset_left = 368.0
offset_top = 5.0
offset_right = 368.0
offset_bottom = 5.0
progress_bar = NodePath("HBoxContainer/TextureProgressBar")

[node name="DarkOverlay" parent="Hud/Content" instance=ExtResource("11_viw1t")]
visible = false
layout_mode = 1
starting_transparency = 1.0
initial_delay = 1.0

[node name="Tutorial" parent="Hud" instance=ExtResource("14_ix57b")]

[node name="Buttons" parent="Hud/Tutorial" index="0"]
z_as_relative = false

[node name="Cloud_Filter" parent="Hud/Tutorial/Buttons" index="0" node_paths=PackedStringArray("panel")]
offset_left = 375.0
offset_top = 234.0
offset_right = 481.0
offset_bottom = 340.0
panel = NodePath("../../Panels/Cloud_Filter")

[node name="Cloud_SchizoDispenser" parent="Hud/Tutorial/Buttons" index="1" node_paths=PackedStringArray("panel")]
offset_left = 1140.0
offset_top = 459.0
offset_right = 1246.0
offset_bottom = 565.0
panel = NodePath("../../Panels/Cloud_SchizoDispenser")

[node name="Cloud_LoveHateWheel" parent="Hud/Tutorial/Buttons" index="2" node_paths=PackedStringArray("panel")]
offset_left = 999.0
offset_top = 335.0
offset_right = 1105.0
offset_bottom = 441.0
panel = NodePath("../../Panels/Cloud_LoveHateWheel")

[node name="Cloud_SleepyBall" parent="Hud/Tutorial/Buttons" index="3" node_paths=PackedStringArray("panel")]
offset_left = 966.0
offset_top = 32.0
offset_right = 1072.0
offset_bottom = 138.0
panel = NodePath("../../Panels/Cloud_SleepyBall")

[node name="Cloud_KaraokeMachine" parent="Hud/Tutorial/Buttons" index="4" node_paths=PackedStringArray("panel")]
offset_left = 692.0
offset_top = 453.0
offset_right = 798.0
offset_bottom = 559.0
panel = NodePath("../../Panels/Cloud_KaraokeMachine")

[node name="Cloud_EatingTube" parent="Hud/Tutorial/Buttons" index="5" node_paths=PackedStringArray("panel")]
offset_left = 454.0
offset_top = 420.0
offset_right = 560.0
offset_bottom = 526.0
panel = NodePath("../../Panels/Cloud_EatingTube")

[node name="Cloud_CookieBox" parent="Hud/Tutorial/Buttons" index="6" node_paths=PackedStringArray("panel")]
offset_left = 912.0
offset_top = 474.0
offset_right = 1018.0
offset_bottom = 580.0
panel = NodePath("../../Panels/Cloud_CookieBox")

[node name="Cloud_Flusher" parent="Hud/Tutorial/Buttons" index="7" node_paths=PackedStringArray("panel")]
offset_left = 657.0
offset_top = 26.0
offset_right = 763.0
offset_bottom = 132.0
panel = NodePath("../../Panels/Cloud_Flusher")

[node name="Cloud_AntiTimeoutMachine" parent="Hud/Tutorial/Buttons" index="8" node_paths=PackedStringArray("panel")]
offset_left = 1190.0
offset_top = 225.0
offset_right = 1296.0
offset_bottom = 331.0
panel = NodePath("../../Panels/Cloud_AntiTimeoutMachine")

[node name="Cloud_Ram" parent="Hud/Tutorial/Buttons" index="9" node_paths=PackedStringArray("panel")]
offset_left = 462.0
offset_top = 21.0
offset_right = 568.0
offset_bottom = 127.0
panel = NodePath("../../Panels/Cloud_Ram")

[node name="Cloud_Filter" parent="Hud/Tutorial/Panels" index="0"]
visible = false
offset_left = 483.0
offset_top = 104.0
offset_right = 758.0
offset_bottom = 263.0

[node name="Cloud_SchizoDispenser" parent="Hud/Tutorial/Panels" index="1"]
visible = false
offset_left = 919.0
offset_top = 260.0
offset_right = 1194.0
offset_bottom = 397.0

[node name="Cloud_LoveHateWheel" parent="Hud/Tutorial/Panels" index="2"]
visible = false
offset_left = 690.0
offset_top = 239.0
offset_right = 965.0
offset_bottom = 420.0

[node name="Cloud_SleepyBall" parent="Hud/Tutorial/Panels" index="3"]
visible = false
offset_left = 669.0
offset_top = 91.0
offset_right = 944.0
offset_bottom = 228.0

[node name="Cloud_KaraokeMachine" parent="Hud/Tutorial/Panels" index="4"]
visible = false
offset_left = 500.0
offset_top = 254.0
offset_right = 775.0
offset_bottom = 391.0

[node name="Cloud_EatingTube" parent="Hud/Tutorial/Panels" index="5"]
visible = false
offset_left = 456.0
offset_top = 246.0
offset_right = 731.0
offset_bottom = 383.0

[node name="Cloud_CookieBox" parent="Hud/Tutorial/Panels" index="6"]
visible = false
offset_left = 753.0
offset_top = 316.0
offset_right = 1028.0
offset_bottom = 453.0

[node name="Cloud_Flusher" parent="Hud/Tutorial/Panels" index="7"]
visible = false
offset_left = 726.0
offset_top = 74.0
offset_right = 1001.0
offset_bottom = 277.0

[node name="Cloud_AntiTimeoutMachine" parent="Hud/Tutorial/Panels" index="8"]
visible = false
offset_left = 922.0
offset_top = 45.0
offset_right = 1197.0
offset_bottom = 204.0

[node name="Cloud_Ram" parent="Hud/Tutorial/Panels" index="9"]
visible = false
offset_left = 570.0
offset_top = 119.0
offset_right = 845.0
offset_bottom = 256.0

[editable path="Hud/Tutorial"]
[editable path="Hud/Tutorial/Panels/Cloud_Filter"]
[editable path="Hud/Tutorial/Panels/Cloud_SchizoDispenser"]
[editable path="Hud/Tutorial/Panels/Cloud_LoveHateWheel"]
[editable path="Hud/Tutorial/Panels/Cloud_SleepyBall"]
[editable path="Hud/Tutorial/Panels/Cloud_KaraokeMachine"]
[editable path="Hud/Tutorial/Panels/Cloud_EatingTube"]
[editable path="Hud/Tutorial/Panels/Cloud_CookieBox"]
[editable path="Hud/Tutorial/Panels/Cloud_Flusher"]
[editable path="Hud/Tutorial/Panels/Cloud_AntiTimeoutMachine"]
[editable path="Hud/Tutorial/Panels/Cloud_Ram"]
